--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["vitest/globals"],
     "target": "ES2020",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
@@ -23,6 +24,6 @@
     "isolatedModules": true,
     "noEmit": true
   },
-  "include": ["src/**/*", "scripts/**/*", "panda.config.ts"],
+  "include": ["src/**/*", "scripts/**/*", "panda.config.ts", "jest-axe.d.ts"],
   "exclude": ["node_modules", "dist", "styled-system", "storybook-static"]
 }
