fix: use NPM_TOKEN for publishing (OIDC requires npm 11.5+/Node 24)
Trusted Publishing requires npm >=11.5.1 which is only in Node 24+.
Changesets action also doesn't have native OIDC support yet.
Reverting to classic NPM_TOKEN approach which is proven and reliable.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,6 @@ concurrency:
 permissions:
   contents: write
   pull-requests: write
-  id-token: write  # Required for npm Trusted Publishing (OIDC)
 
 jobs:
   release:
@@ -51,7 +50,7 @@ jobs:
           title: "chore: version packages"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # No NPM_TOKEN needed - using Trusted Publishing (OIDC)
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Create Git Tag
         if: steps.changesets.outputs.published == 'true'
