fix: remove registry-url that conflicts with OIDC authentication

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           node-version: 24
           cache: 'pnpm'
-          registry-url: 'https://registry.npmjs.org'
+          # DO NOT set registry-url - it creates .npmrc with NODE_AUTH_TOKEN that conflicts with OIDC
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
