--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
         id: changesets
         uses: changesets/action@v1
         with:
-          version: pnpm exec changeset version
+          version: changeset version
           # Don't use changesets publish - we'll do it manually with npm for OIDC
           publish: echo "Skipping changesets publish, using npm directly"
           commit: "chore: version packages"
