fix: restore changeset scripts to package.json
PR #17 incorrectly removed the changeset scripts that the workflow depends on.

The working configuration (commit 9035f305) had:
- Workflow: version: pnpm changeset version
- Package.json: scripts for 'changeset' and 'version'

When pnpm runs 'changeset version', it looks for the 'changeset' script
in package.json, which then executes the binary from node_modules/.bin/

Without these scripts, the command fails to find the changeset executable.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
         id: changesets
         uses: changesets/action@v1
         with:
-          version: changeset version
+          version: pnpm changeset version
           # Don't use changesets publish - we'll do it manually with npm for OIDC
           publish: echo "Skipping changesets publish, using npm directly"
           commit: "chore: version packages"
