--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "tokens:full": "pnpm tokens:generate && pnpm build:panda",
     "docs:generate": "tsx scripts/generate-storybook-docs.ts",
     "typecheck": "tsc --noEmit",
+    "changeset": "changeset",
+    "version": "changeset version",
     "release": "pnpm build && changeset publish --access public"
   },
   "peerDependencies": {
