fix: restore panda codegen to prepare script for CI
The prepare script was changed to only run husky, which broke CI
because styled-system/ wasn't being generated during pnpm install.

This caused all type checking to fail with 'Cannot find module styled-system/*'.

Fix: Run both panda codegen AND husky in prepare script.

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "build:panda": "panda codegen",
     "build:lib": "tsup",
     "build:storybook": "pnpm docs:generate && storybook build",
-    "prepare": "husky",
+    "prepare": "panda codegen && husky",
     "lint": "eslint src --ext .ts,.tsx",
     "test": "vitest",
     "test:ui": "vitest --ui",
