--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,7 +94,7 @@ jobs:
           # Check if there are any changes
           if [ -n "$(git status --porcelain)" ]; then
             git add .
-            git commit -m "chore: version packages"
+            git commit -m "chore: version packages" --no-verify
             git push origin $BRANCH --force
 
             # Create or update PR
