fix: resolve TypeScript module resolution and add missing props
- Fix all new components to use path alias (styled-system/*) instead of relative paths (../styled-system/*)
- Add children prop to InputGroupProps interface
- Update pre-commit hook to generate styled-system before typecheck
- Remove styled-system from tsconfig.json exclude array (required for module resolution)
- All type checks now pass successfully

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,5 @@
     "noEmit": true
   },
   "include": ["src/**/*", "scripts/**/*", "panda.config.ts", "jest-axe.d.ts"],
-  "exclude": ["node_modules", "dist", "styled-system", "storybook-static"]
+  "exclude": ["node_modules", "dist", "storybook-static"]
 }
