feat: fix stepper and add verification system
Stepper fixes:
- Add label slot with nowrap styling
- Add separator minWidth and proper color token
- Add trigger flexShrink to prevent squeezing

Verification improvements:
- Add comprehensive verify script with colored output
- Add pre-push hook for automatic verification
- Update pre-commit to detect recipe changes
- Update build process to include typecheck

This fixes stepper connector lines not showing in discourser.ai.

--- a/package.json
+++ b/package.json
@@ -157,7 +157,7 @@
   ],
   "scripts": {
     "dev": "pnpm docs:generate && storybook dev -p 6006",
-    "build": "pnpm build:panda && pnpm build:lib && pnpm build:types",
+    "build": "pnpm build:panda && pnpm typecheck && pnpm build:lib && pnpm build:types",
     "build:panda": "panda codegen",
     "build:css": "panda cssgen --outfile dist/styles.css",
     "build:lib": "tsup",
@@ -177,6 +177,11 @@
     "transform:contract-to-dtcg": "tsx scripts/design-language-to-dtcg.ts",
     "docs:generate": "tsx scripts/generate-storybook-docs.ts",
     "typecheck": "tsc --noEmit",
+    "verify": "bash scripts/verify.sh",
+    "verify:types": "pnpm build:panda && pnpm typecheck",
+    "verify:lint": "pnpm lint",
+    "verify:test": "pnpm test run",
+    "verify:build": "pnpm build",
     "changeset": "changeset",
     "version": "changeset version",
     "ci:version": "pnpm exec changeset version",
