--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,9 @@ styled-system/
 storybook-static/
 .storybook-out/
 
-# Generated Storybook documentation
-stories/documentation/
+# Generated Storybook documentation (but not figma-translation)
+stories/documentation/*
+!stories/documentation/figma-translation/
 
 # Test coverage
 coverage/
