creates a new scenarioQueue component and udpates tokens

--- a/package.json
+++ b/package.json
@@ -150,6 +150,10 @@
       "types": "./src/components/Stepper/index.ts",
       "import": "./src/components/Stepper/index.ts"
     },
+    "./ScenarioQueue": {
+      "types": "./src/components/ScenarioQueue/index.ts",
+      "import": "./src/components/ScenarioQueue/index.ts"
+    },
     "./Breadcrumb": {
       "types": "./src/components/Breadcrumb.tsx",
       "import": "./src/components/Breadcrumb.tsx"
