--- a/package.json
+++ b/package.json
@@ -149,6 +149,14 @@
     "./Stepper": {
       "types": "./src/components/Stepper/index.ts",
       "import": "./src/components/Stepper/index.ts"
+    },
+    "./ScenarioQueue": {
+      "types": "./src/components/ScenarioQueue/index.ts",
+      "import": "./src/components/ScenarioQueue/index.ts"
+    },
+    "./Breadcrumb": {
+      "types": "./src/components/Breadcrumb.tsx",
+      "import": "./src/components/Breadcrumb.tsx"
     }
   },
   "files": [
@@ -194,6 +202,7 @@
   },
   "dependencies": {
     "@ark-ui/react": "^5.31.0",
+    "@dnd-kit/react": "^0.3.1",
     "clsx": "^2.1.1"
   },
   "devDependencies": {
